<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    <Spinner
        android:id="@+id/leagueSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/seasonSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
	    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ScrollView android:id="@+id/tabTable"
                	android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableLayout android:id="@+id/tableTableLayout"
                    	android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:stretchColumns="*"></TableLayout>
                </ScrollView>
                        
                <LinearLayout
                    android:id="@+id/tabMatches"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:text="@string/matchpage" >

                    <LinearLayout
                        android:id="@+id/tabMatchesTopRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/buttonPreviousRound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/previous" >

</Button>

                        <TextView
                            android:id="@+id/RoundTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:text="@string/round" >

</TextView>

                        <Button
                            android:id="@+id/buttonNextRound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/next" >

</Button>
                        
                    </LinearLayout>"

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                    	<TableLayout 
                        android:id="@+id/roundTableLayout"
                                            	android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:stretchColumns="*"></TableLayout>
                	</ScrollView>
                        
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabteams"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:text="@string/teampage" >
                    

                </LinearLayout>

				<LinearLayout
				    android:id="@+id/tableague"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent" 
				    android:text="@string/leaguepage" >
				    

                </LinearLayout>
                

            </FrameLayout>

        </LinearLayout>
    </TabHost>

</LinearLayout>